--- a/src/main/resources/templates/updateUserPage.html
+++ b/src/main/resources/templates/updateUserPage.html
@@ -8,7 +8,7 @@
 <h1>Enter the new info for this User</h1>
 <form action="#" th:action="@{/update/{id}(id=${id})}" th:object="${userFinded}" method="post">
   <p>Name: <input type="text" th:field="${userFinded.name}" /></p>
-  <p>LastName: <input type="text" th:field="${userFinded.lastName}" /></p>
+  <p>Password: <input type="text" th:field="${userFinded.password}" /></p>
   <p>Salary: <input type="text" th:field="${userFinded.salary}" /></p>
   <p><input type="submit" value="Affirm edit" /></p>
 </form>
