--- a/src/main/resources/templates/userPage.html
+++ b/src/main/resources/templates/userPage.html
@@ -8,7 +8,7 @@
 <h1>Add new User</h1>
 <form action="#" th:action="@{/userApp}" th:object="${userFormer}" method="post">
     <p>Name: <input type="text" th:field="*{name}" /></p>
-    <p>LastName: <input type="text" th:field="*{lastName}" /></p>
+    <p>Password: <input type="text" th:field="*{password}" /></p>
     <p>Salary: <input type="text" th:field="*{salary}" /></p>
     <p><input type="submit" value="Create" /></p>
 </form>
@@ -17,13 +17,13 @@
     <tr>
         <td>ID</td>
         <td>name</td>
-        <td>lastName</td>
+        <td>password</td>
         <td>salary</td>
     </tr>
     <tr th:each="lst : ${users}">
         <td th:utext="${lst.id}">ID</td>
         <td th:utext="${lst.name}">name</td>
-        <td th:utext="${lst.lastName}">lastName</td>
+        <td th:utext="${lst.password}">password</td>
         <td th:utext="${lst.salary}">salary</td>
         <td><a th:href="@{/delete/{id}(id=${lst.id})}">Delete</a></td>
         <td><a th:href="@{/edit/{id}(id=${lst.id})}">Edit</a></td>
