v5 Need UserData for page

--- a/src/main/resources/templates/deletedUserPage.html
+++ b/src/main/resources/templates/deletedUserPage.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 <h1>User already deleted</h1>
-<a th:href="@{/userApp}">Return</a>
+<a th:href="@{/admin/userApp}">Return</a>
+<br>
+<br>
+<br>
+<a th:href="@{/logout}">logout</a>
 </body>
 </html>
