v.8 change admin-page

--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>User page</title>
+    <title>Admin panel</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
@@ -14,7 +14,7 @@
                 <b><span sec:authentication="name"></span></b>
                 with roles:
             </div>
-            <div sec:authorize="hasAuthority('ADMIN')">
+            <div class = "mr-1" sec:authorize="hasAuthority('ADMIN') ">
                 ADMIN
             </div>
             <div sec:authorize="hasAuthority('USER')">
@@ -27,55 +27,68 @@
 
 <div class="container-fluid p-0">
     <div class="row">
-        <div class="col-2"> <!div áîêîâîé áàð ñëåâà>
+        <div class="col-2"> <!div Ð±Ð¾ÐºÐ¾Ð²Ð¾Ð¹ Ð±Ð°Ñ€ ÑÐ»ÐµÐ²Ð°>
             <button type="button" class="btn-block btn-primary rounded border-0 p-2 mt-3 text-left">
                 User
             </button>
 
-        </div> <!div áîêîâîé áàð ñëåâà>
+        </div> <!div Ð±Ð¾ÐºÐ¾Ð²Ð¾Ð¹ Ð±Ð°Ñ€ ÑÐ»ÐµÐ²Ð°>
 
 
         <div class="col-10 bg-light p-4">
             <h1>User information-page</h1>
             <div class="col-12 border rounded px-0 pb-0">
                 <div class="pl-4 py-2">
-                <h5><b>About user</b></h5>
+                    <h5><b>About user</b></h5>
                 </div>
                 <div class="">
 
-                    <! òàáëè÷íûé div áëîê>
+                    <! Ñ‚Ð°Ð±Ð»Ð¸Ñ‡Ð½Ñ‹Ð¹ div Ð±Ð»Ð¾Ðº>
                     <main class="container-fluid border-box bg-white border-top" role="main">
 
-                            <div class="container-fluid pt-4 pb-3 pl-2">
-                            <table class="table table-striped">
-                                <thead>
-                                <tr>
-                                    <th scope="col">ID</th>
-                                    <th scope="col">Name</th>
-                                    <th scope="col">Salary</th>
-                                    <th scope="col">Role</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr>
-                                    <td><a th:text="${user.id}"></a></td>
-                                    <td><a th:text="${user.name}"></a></td>
-                                    <td><a th:text="${user.salary}"></a></td>
-                                    <td><a th:text="${user.name}"></a></td>
-                                </tr>
-                                </tbody>
-                            </table>
-                            </div>
+                        <div class="container-fluid pt-4 pb-3 pl-2">
+
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <td>ID</td>
+                        <td>name</td>
+                        <td>password</td>
+                        <td>salary</td>
+                    </tr>
+                </thead>
+                    <tr th:each="lst : ${users}">
+                        <td th:utext="${lst.id}">ID</td>
+                        <td th:utext="${lst.name}">name</td>
+                        <td th:utext="${lst.password}">password</td>
+                        <td th:utext="${lst.salary}">salary</td>
+                        <td><a th:href="@{/admin/delete/{id}(id=${lst.id})}">Delete</a></td>
+                        <td><a th:href="@{/admin/edit/{id}(id=${lst.id})}">Edit</a></td>
+                    </tr>
+                </table>
+                        </div>
                     </main>
                 </div>
             </div>
         </div>
 
     </div> <!row>
-</div> <!container>
+
+
 
 <br>
-<br>
+    <h1>Add new User</h1>
+    <form action="#" th:action="@{/admin/userApp}" th:object="${userFormer}" method="post">
+        <p>Name: <input type="text" th:field="*{name}" /></p>
+        <p>Password: <input type="text" th:field="*{password}" /></p>
+        <p>Salary: <input type="text" th:field="*{salary}" /></p>
+        <p><input type="submit" value="Create" /></p>
+    </form>
+
+    <br>
+    <a th:href="@{/user}">go to User page</a>
+    <br>
+</div> <!container>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
