--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -28,9 +28,10 @@
 <div class="container-fluid p-0">
     <div class="row">
         <div class="col-2"> <!div боковой бар слева>
-            <button type="button" class="btn-block btn-primary rounded border-0 p-2 mt-3 text-left">
-                User
-            </button>
+
+            <a class="btn-block btn-primary rounded border-0 p-2 mt-3 mb-0 text-left" th:href="@{/admin/userApp}" role="button">Admin</a>
+            <a class="btn-block btn-link rounded border-0 p-2 mt-0 text-left" th:href="@{/user}" role="button">User</a>
+
 
         </div> <!div боковой бар слева>
 
