--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -105,7 +105,7 @@
                                         </div>
                                         <div class="form-group mb-3">
                                             <label for="formSalary"><strong>Salary</strong></label>
-                                            <input type="password" class="form-control" id="formSalary" placeholder="Enter salary" th:field="*{salary}">
+                                            <input type="number" class="form-control" id="formSalary" placeholder="Enter salary" th:field="*{salary}">
                                         </div>
                                         <div class="form-group mb-3">
                                             <label for="formRole"><strong>Role</strong></label>
