--- a/src/main/resources/templates/deletedUserPage.html
+++ b/src/main/resources/templates/deletedUserPage.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>User already deleted</h1>
-<a th:href="@{/admin/userApp}">Return</a>
+<a th:href="@{/admin}">Return</a>
 <br>
 <br>
 <br>
