--- a/src/main/resources/templates/updateUserPage.html
+++ b/src/main/resources/templates/updateUserPage.html
@@ -13,7 +13,7 @@
   <p><input type="submit" value="Affirm edit" /></p>
 </form>
 <br>
-<a th:href="@{/admin/userApp}">Return</a>
+<a th:href="@{/admin}">Return</a>
 <br>
 <br>
 <br>
