--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -29,7 +29,7 @@
     <div class="row">
         <div class="col-2"> <!div боковой бар слева>
             <a class="btn-block btn-primary rounded border-0 p-2 mt-3 mb-0 text-left" th:href="@{/user}" role="button">User</a>
-            <a class="btn-block btn-link rounded border-0 p-2 mt-0 text-left"  th:href="@{/admin/userApp} " role="button" sec:authorize="hasAuthority('ADMIN')">Admin</a>
+            <a class="btn-block btn-link rounded border-0 p-2 mt-0 text-left"  th:href="@{/admin} " role="button" sec:authorize="hasAuthority('ADMIN')">Admin</a>
         </div> <!div боковой бар слева>
 
 
