--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -30,8 +30,10 @@
         <div class="col-2"> <!div боковой бар слева>
             <a class="btn-block btn-primary rounded border-0 p-2 mt-3 mb-0 text-left" th:href="@{/admin/userApp}" role="button">Admin</a>
             <a class="btn-block btn-link rounded border-0 p-2 mt-0 text-left" th:href="@{/user}" role="button">User</a>
-        </div> <!div боковой бар слева>
 
+           <!тестовая хрень> <a class="btn-block btn-link rounded border-0 p-2 mt-0 text-left" role="button">User</a>
+
+        </div> <!div боковой бар слева>
 
         <div class="col-10 bg-light p-4">
             <h1>Admin panel</h1>
@@ -43,9 +45,95 @@
                 <li class="nav-item"><!-ухо-второй-вкладки>
                     <a class="nav-link" data-toggle="tab" href="#newUser">New user</a>
                 </li>
+
+                <! Временная вкладка для рест-таблицы>
+                <li class="nav-item"><!-ухо-вкладки>
+                    <a class="nav-link" data-toggle="tab" href="#usersRestTable">Rest vkladka</a>
+                </li>
+
             </ul>
 
             <div class="tab-content"> <!-содержимое вкладок>
+
+                <div class="tab-pane fade" id="usersRestTable"> <!-содержимое временной вкладки>
+                    <div class="col-12 border rounded px-0 pt-0">
+                        <div class="pl-4 py-2">
+                            <h5><b>Test vkladka</b></h5>
+                        </div>
+                        <div class="">
+
+                            <! табличный div блок>
+                            <main class="container-fluid border-box bg-white border-top" role="main">
+
+                                <div class="container-fluid pt-4 pb-3 pl-2">
+
+                                    <table class="table table-striped">
+                                        <thead>
+                                        <tr>
+                                            <th scope="col">ID</th>
+                                            <th scope="col">Name</th>
+                                            <th scope="col">Salary</th>
+                                            <th scope="col">Role</th>
+                                            <th scope="col">Edit</th>
+                                            <th scope="col">Delete</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody id="usersTablePlacement">
+
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </main>
+                        </div>
+                    </div>
+
+                    <div class="col-12 border rounded px-0 pt-0">
+                        <div class="pl-4 py-2">
+                            <h5><b>Add new User</b></h5>
+                        </div>
+                        <div class="">
+
+                            <! табличный div блок>
+                            <div class="container-fluid border-box bg-white border-top">
+                                <div class="container pt-4 pb-3 pl-2">
+                                    <div class="row justify-content-center align-items-center">
+
+                                        <form class="form-signin mx-auto font-weight-bold text-center p-3" th:action="@{/create}" th:object="${userFormer}" method="post">
+                                            <div class="form-group mb-3">
+                                                <label for="formName" class="text-red text-center mx-auto"><strong>Name</strong></label>
+                                                <input type="text" class="form-control" id="formName" placeholder="Enter name" name="name" required>
+                                            </div>
+                                            <div class="form-group mb-3">
+                                                <label for="formPassword"><strong>Password</strong></label>
+                                                <input type="password" class="form-control" id="formPassword" name="password" required>
+                                            </div>
+                                            <div class="form-group mb-3">
+                                                <label for="formSalary"><strong>Salary</strong></label>
+                                                <input type="number" class="form-control" id="formSalary" placeholder="Enter salary" name="salary" required>
+                                            </div>
+                                            <div class="form-group mb-3">
+                                                <label for="formRoles">Role</label>
+                                                <select class="form-control" id="formRoles" multiple size="2" name="roles" required>
+                                                    <option th:each="role : ${roleNames}"
+                                                            th:value="${role.id}"
+                                                            th:text="${role.name}"></option>
+                                                </select>
+                                            </div>
+                                            <button type="submit" class="btn-lg btn-success rounded border-0 align-content-center">Add new user</button>
+                                        </form>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div> <!-содержимое временной вкладки /конец>
+
+
+
+
+
                 <div class="tab-pane fade show active" id="usersTable"> <!-содержимое вкладки 1>
                     <div class="col-12 border rounded px-0 pt-0">
                         <div class="pl-4 py-2">
@@ -181,35 +269,35 @@
                                                                       class="form-signin mx-auto font-weight-bold text-center"
                                                                       style="width: 200px;">
                                                                     <p>
-                                                                        <label for="id">ID</label>
+                                                                        <label for="idDelete">ID</label>
                                                                         <input class="form-control form-control-sm" type="text"
-                                                                               name="id" id="id" readonly
+                                                                               name="id" id="idDelete" readonly
                                                                                th:value="${user.id}">
                                                                     </p>
                                                                     <p>
-                                                                        <label for="name">First name</label>
+                                                                        <label for="nameDelete">First name</label>
                                                                         <input class="form-control form-control-sm" type="text"
                                                                                name="name" th:value="${user.salary}"
-                                                                               id="name" placeholder="First name" readonly
+                                                                               id="nameDelete" placeholder="First name" readonly
                                                                                autofocus>
                                                                     </p>
                                                                     <p>
-                                                                        <label for="salary">Salary</label>
+                                                                        <label for="salaryDelete">Salary</label>
                                                                         <input class="form-control form-control-sm"
                                                                                type="number"
                                                                                name="salary" th:value="${user.salary}"
-                                                                               id="salary" placeholder="Salary" readonly >
+                                                                               id="salaryDelete" placeholder="Salary" readonly >
                                                                     </p>
                                                                     <p>
-                                                                        <label for="passwd">Password</label>
+                                                                        <label for="passwdDelete">Password</label>
                                                                         <input class="form-control form-control-sm"
                                                                                type="password"
                                                                                name="password" th:value="${user.password}"
-                                                                               id="passwd" placeholder="Password" readonly>
+                                                                               id="passwdDelete" placeholder="Password" readonly>
                                                                     </p>
                                                                     <p>
-                                                                        <label for="roles">Role</label>
-                                                                        <select id="roles" name="roles"
+                                                                        <label for="rolesDelete">Role</label>
+                                                                        <select id="rolesDelete" name="roles"
                                                                                 class="form-control form-control-sm"
                                                                                 multiple size="2" readonly>
                                                                             <option th:each="role : ${roleNames}"
@@ -288,8 +376,62 @@
 </div> <!container>
 
 
+
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
+<script type="text/javascript" th:src="@{testMethod.js}"></script>
+
+<script>
+
+    getAllUsersList();
+
+// function updateUser (json) {
+//
+// }
+//
+//
+//     fetch('http://localhost:8080/api/user/1')
+//         .then((response) => {
+//             console.log(response);
+//                 if (response.ok) { // если HTTP-статус в диапазоне 200-299
+//                                    // получаем тело ответа (см. про этот метод ниже)
+//                     let json = response.json().then((json) => {
+//                         console.log(json.name)
+//                     });
+//                     console.log(json);
+//                 } else {
+//                     alert("Ошибка HTTP: " + response.status);
+//                 }
+//         })
+//         .catch(function(error) {
+//             console.log(error);
+//         });
+
+
+    /*   $('#editModal').on('show.bs.modal', function (event) {
+           let button = $(event.relatedTarget) // Button that triggered the modal
+           let id = button.data('id') // Extract info from data-* attributes
+           // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
+           // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
+           if (id) {
+               $.get({
+                   url: 'api/user/' + id,
+                   success: (data) => {
+                       let modal = $(this)
+                       modal.find('#id').val(data.id)
+                       modal.find('#pass').val(data.password)
+                       modal.find('#salary').val(data.salary)
+
+                   }
+               })
+           }
+
+       })
+   */
+</script>
+
 </body>
 </html>
